[package]
name = "ducky-interpreter"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ducky_interpreter"
crate-type = ["cdylib"]

[dependencies]
ducky-exec = { version = "0.1.0", path = "ducky-exec" }
pyo3 = "0.19.0"
