[package]
name = "ducky-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
colored = { version = "2.0.4", features = ["no-color"] }
fern = { version = "0.6.2", features = ["colored"] }
lazy_static = "1.5.0"
log = "0.4.22"
pest = { version = "2.7.12", features = ["pretty-print"] }
pest_derive = "2.7.12"
serde = { version = "1.0.210", features = ["derive"] }
serde_cbor = "0.11.2"
serialport = "4.5.0"
